# gitssues

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  env.dist  gitssues.yml  pylama.ini  pyproject.toml  requirements.txt  wsgi.py
docs/: README.md
docs/img/: gitssues-flow.excalidraw
gitssues/: .bandit  cli.py  helpers.py  server.py
gitssues/github/: __init__.py  api.py  cli.py  exc.py
gitssues/jira/: __init__.py  api.py  cli.py  exc.py  jira.py
tests/: test_gitssues.py
