[tool.poetry]
name = "gitssues"
version = "0.0.1"
description = "Jira and Github sync issues"
authors = ["lecovi <colomboleandro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
pyyaml = "^5.3.1"
flask = "^1.1.2"
gunicorn = "^20.0.4"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"
pyngrok = "^4.2.1"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
